--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
           <div class="navbar-nav ms-auto p-4 p-lg-0">
             <a href="index.html" class="nav-item nav-link active">Accueil</a>
             <a href="about.html" class="nav-item nav-link">À propos</a>
+
             <!-- <a href="causes.html" class="nav-item nav-link">Causes</a> -->
             <div class="nav-item dropdown">
               <a
@@ -148,6 +149,7 @@
                 <a href="donate.html" class="dropdown-item"
                   >Faire un don à la fondation</a
                 >
+                <a href="blog.html" class="dropdown-item">Blog d'article</a>
                 <!-- <a href="team.html" class="dropdown-item">Our Team</a> -->
                 <!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a> -->
                 <!-- <a href="404.html" class="dropdown-item">404 Page</a> -->
@@ -672,7 +674,114 @@
       </div>
     </div>
     <!-- Service End -->
+    <!-- About Start -->
+    <div class="container-xxl py-5">
+      <div class="container">
+        <div class="row g-5">
+          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s"></div>
+          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
+            <div class="h-100">
+              <div
+                class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3"
+              >
+                Blog d'article
+              </div>
+              <h1 class="display-6 mb-5">Ebenezer 2</h1>
 
+              <p class="mb-5" style="text-align: justify">
+                L'événement chrétien tant attendu, Ebenezer 2, est sur le point
+                d'illuminer les cœurs et les âmes de milliers de croyants.
+                Organisé par le Centre de Prière "La Grâce Parle", cet événement
+                promet une expérience inoubliable de foi, de prière, de louange
+                et d'enseignement biblique. Après le succès retentissant de la
+                première édition, l'équipe derrière l'événement revient avec
+                encore plus de ferveur et de dévouement pour offrir un programme
+                enrichissant et édifiant....
+              </p>
+              <a class="btn btn-primary py-2 px-3 me-3" href="blog.html">
+                Lire plus
+                <div
+                  class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2"
+                >
+                  <i class="fa fa-arrow-right"></i>
+                </div>
+              </a>
+              <a class="btn btn-outline-primary py-2 px-3" href="contact.html">
+                Contact
+                <div
+                  class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2"
+                >
+                  <i class="fa fa-arrow-right"></i>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
+            <div class="h-100">
+              <!-- <div class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3">À propos de nous</div> -->
+              <h1 class="display-6 mb-5">
+                Épanouir les Cœurs : Cultiver l'Amour de Christ pour une Vie
+                Transformée
+              </h1>
+              <!-- <div class="bg-light border-bottom border-5 border-primary rounded p-4 mb-4">
+                          <p class="text-dark mb-2">Nourrissez-vous de l'amour du Christ, une source intarissable d'espoir et de guérison, illuminant chaque aspect de votre existence.</p>
+                          <span class="text-primary">Samuel Dalum, Foundateur & Ceo</span>
+                      </div> -->
+              <p class="mb-5" style="text-align: justify">
+                Cultivons l'amour de Christ, une force bienveillante qui éclaire
+                nos vies, dissipe les ténèbres et inspire des actions empreintes
+                de compassion et de grâce infinie. Comme l'apôtre Paul nous le
+                rappelle dans
+                <strong style="color: #eeba05">
+                  1 Corinthiens 16:14 (LSG) : "Que tout ce que vous faites se
+                  fasse avec amour." </strong
+                >Cette exhortation résonne profondément dans nos cœurs, nous
+                rappelant que chaque acte, chaque parole et chaque pensée
+                doivent être teintés de l'amour du Christ. En suivant cette
+                voie, nous contribuons à illuminer non seulement nos propres
+                vies, mais....
+              </p>
+              <a class="btn btn-primary py-2 px-3 me-3" href="ministere.html">
+                Lire plus
+                <div
+                  class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2"
+                >
+                  <i class="fa fa-arrow-right"></i>
+                </div>
+              </a>
+              <a class="btn btn-outline-primary py-2 px-3" href="contact.html">
+                Contact
+                <div
+                  class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2"
+                >
+                  <i class="fa fa-arrow-right"></i>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+            <div
+              class="position-relative overflow-hidden h-100"
+              style="min-height: 400px"
+            >
+              <img
+                class="position-absolute w-100 h-100 pt-5 pe-5"
+                src="img/about-5.jfif"
+                alt="  Éclairant les âmes perdues, Répandant l'amour de Christ-1"
+                style="object-fit: cover; width: 100%"
+              />
+              <img
+                class="position-absolute top-0 end-0 bg-white ps-2 pb-2"
+                src="img/about-4.jfif"
+                alt="  Éclairant les âmes perdues, Répandant l'amour de Christ-2"
+                style="width: 200px; height: 200px"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- About End -->
     <!-- Donate Start -->
     <div
       class="container-fluid donate my-5 py-5"
