--- a/newsletter.html
+++ b/newsletter.html
@@ -187,6 +187,7 @@
                 <a href="donate.html" class="dropdown-item"
                   >Faire un don à la fondation</a
                 >
+                <a href="blog.html" class="dropdown-item">Blog d'article</a>
                 <!-- <a href="team.html" class="dropdown-item">Our Team</a> -->
                 <!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a> -->
                 <!-- <a href="404.html" class="dropdown-item">404 Page</a> -->
