--- a/blog.html
+++ b/blog.html
@@ -207,7 +207,6 @@
             <a href="index.html" class="nav-item nav-link">Accueil</a>
             <a href="about.html" class="nav-item nav-link">À propos</a>
 
-            >
             <!-- <a href="causes.html" class="nav-item nav-link">Causes</a> -->
             <div class="nav-item dropdown">
               <a
@@ -319,25 +318,24 @@
           />
           <p>
             L'événement chrétien tant attendu, Ebenezer 2, est sur le point
-            d'illuminer les cœurs et les âmes de milliers de croyants. Organisé
-            par le Centre de Prière "La Grâce Parle", cet événement promet une
-            expérience inoubliable de foi, de prière, de louange et
-            d'enseignement biblique. Après le succès retentissant de la première
-            édition, l'équipe derrière l'événement revient avec encore plus de
-            ferveur et de dévouement pour offrir un programme enrichissant et
-            édifiant.
+            d'illuminer les cœurs et les âmes de milliers de croyants. Prévu
+            pour le 10 Septembre 2023. Organisé par le Centre de Prière "La
+            Grâce Parle", cet événement promet une expérience inoubliable de
+            foi, de prière, de louange et d'enseignement biblique. Après le
+            succès retentissant de la première édition, l'équipe derrière
+            l'événement revient avec encore plus de ferveur et de dévouement
+            pour offrir un programme enrichissant et édifiant.
           </p>
           <br />
           <h3>Renouvellement de la Foi : Un Moment de Prière Puissant</h3>
           <p>
-            Le cœur d'Ebenezer 2 réside dans la puissance de la prière. Le
-            premier jour de l'événement sera dédié à un moment de prière intense
-            et profonde. Les participants auront l'opportunité de se rassembler
-            dans l'unité pour élever leurs voix et leurs cœurs vers le
-            Très-Haut. Que ce soit pour des besoins personnels, des défis
-            mondiaux ou simplement pour louer Dieu, ce moment de prière
-            renouvellera la foi de chacun et renforcera les liens de la
-            communauté.
+            Le cœur d'Ebenezer 2 réside dans la puissance de la prière.
+            L'événement sera dédié à un moment de prière intense et profonde.
+            Les participants auront l'opportunité de se rassembler dans l'unité
+            pour élever leurs voix et leurs cœurs vers le Très-Haut. Que ce soit
+            pour des besoins personnels, des défis mondiaux ou simplement pour
+            louer Dieu, ce moment de prière renouvellera la foi de chacun et
+            renforcera les liens de la communauté.
           </p>
           <h3>Adoration Céleste : Élever les Âmes par la Musique</h3>
           <p>
@@ -357,9 +355,7 @@
             saintes, apportant compréhension et illumination aux vérités
             bibliques. Des sujets tels que la foi, la grâce, l'amour et l'espoir
             seront abordés, offrant des perspectives nouvelles et profondes sur
-            la vie chrétienne. Les participants seront encouragés à poser des
-            questions et à dialoguer, créant ainsi un environnement
-            d'apprentissage dynamique.
+            la vie chrétienne.
           </p>
           <h3>Surprises Divines : Une Touche de Magie Spirituelle</h3>
           <p>
@@ -371,18 +367,7 @@
             des actes de bienveillance, les surprises divines seront une partie
             intégrante de l'expérience Ebenezer 2.
           </p>
-          <h3>
-            Communauté Unie : Rencontrer de Nouveaux Frères et Sœurs en Christ
-          </h3>
-          <p>
-            L'une des beautés d'un événement comme Ebenezer 2 est la possibilité
-            de créer des liens avec d'autres croyants. La communion fraternelle
-            et l'esprit d'unité seront encouragés tout au long de l'événement.
-            Les participants auront l'occasion de rencontrer de nouveaux frères
-            et sœurs en Christ, d'échanger des expériences et de partager leur
-            parcours de foi. Les amitiés formées lors de l'événement pourraient
-            bien durer toute une vie.
-          </p>
+
           <br /><br />
           <p>
             En somme, Ebenezer 2 s'annonce comme un événement chrétien
@@ -403,9 +388,9 @@
       <div class="blog-list">
         <h3>Autres Articles</h3>
         <ul>
-          <li><a href="#">Article 1</a></li>
+          <!-- <li><a href="#">Article 1</a></li>
           <li><a href="#">Article 2</a></li>
-          <li><a href="#">Article 3</a></li>
+          <li><a href="#">Article 3</a></li> -->
           <!-- Ajoutez d'autres articles ici -->
         </ul>
       </div>
