--- a/fanfare.html
+++ b/fanfare.html
@@ -240,7 +240,7 @@
 
     
                       <strong style="color:#EEBA05;">
-                        <a class="btn btn-outline-primary py-2 px-3" href="">
+                        <a class="btn btn-outline-primary py-2 px-3" href="https://64e605ddd133fb0ec74c9b9f--clinquant-empanada-50cf63.netlify.app/">
                         Consulter le site web
                             <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
                                 <i class="fa fa-arrow-right"></i>
