--- a/index.html
+++ b/index.html
@@ -733,7 +733,203 @@ BOUTIQUE
       </div>
     </div>
     <!-- Service End -->
+    <div
+    class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3"
+  >
+    À propos de nous
+  </div>
+  <!-- About Start -->
+  <div id="about" class="container-xxl py-5">
+    <div class="container">
+      <div class="row g-5">
+        <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+          <div
+            class="position-relative overflow-hidden h-100"
+            style="min-height: 400px"
+          >
+            <img
+              class="position-absolute w-100 h-100 pt-5 pe-5"
+              src="img/about-1.jpg"
+              alt=" S'unir pour Changer, Partager et Guider-1"
+              style="object-fit: cover"
+            />
+            <!-- <img
+            class="position-absolute top-0 end-0 bg-white ps-2 pb-2"
+            src="img/about.jpg"
+            alt=" S'unir pour Changer, Partager et Guider-2"
+            style="width: 200px; height: 200px"
+          /> -->
+          </div>
+        </div>
+        <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
+          <div class="h-100">
+            <div
+              class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3"
+            >
+              Ce que nous croyons
+            </div>
+            <h1 class="display-6 mb-5">
+              Nous aidons les personnes dans le besoin dans le monde entier.
+            </h1>
+            <div
+              class="bg-light border-bottom border-5 border-primary rounded p-4 mb-4"
+            >
+              <p class="text-dark mb-2">
+                Animé par la foi, j'ai fondé cette fondation pour semer
+                l'amour, l'espoir et l'entraide à travers chaque action.
+              </p>
+              <span class="text-primary">Samuel Dalum, Fondateur & Ceo</span>
+            </div>
+            <p class="mb-5" style="text-align: justify">
+              Dans un monde marqué par la diversité et l'interconnexion
+              croissante des cultures, des défis humanitaires et des besoins
+              urgents se profilent à l'horizon. Au cœur de cette réalité
+              complexe, notre engagement envers les personnes dans le besoin
+              brille comme un phare d'espoir et d'action. À travers des
+              efforts à l'échelle mondiale, nous avons pris sur nous la
+              mission vitale de tendre la main à ceux qui luttent contre
+              l'adversité....
+            </p>
+            <a
+              class="btn btn-primary py-2 px-3 me-3"
+              href="humanitaire.html#humanitaire"
+            >
+              Lire plus
+              <div
+                class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2"
+              >
+                <i class="fa fa-arrow-right"></i>
+              </div>
+            </a>
+            <a class="btn btn-outline-primary py-2 px-3" href="contact.html">
+              Contact
+              <div
+                class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2"
+              >
+                <i class="fa fa-arrow-right"></i>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
+          <div class="h-100">
+            <!-- <div class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3">À propos de nous</div> -->
+            <h1 class="display-6 mb-5">
+              Épanouir les Cœurs : Cultiver l'Amour de Christ pour une Vie
+              Transformée.
+            </h1>
+            <!-- <div class="bg-light border-bottom border-5 border-primary rounded p-4 mb-4">
+                        <p class="text-dark mb-2">Nourrissez-vous de l'amour du Christ, une source intarissable d'espoir et de guérison, illuminant chaque aspect de votre existence.</p>
+                        <span class="text-primary">Samuel Dalum, Foundateur & Ceo</span>
+                    </div> -->
+            <p class="mb-5" style="text-align: justify">
+              Cultivons l'amour de Christ, une force bienveillante qui éclaire
+              nos vies, dissipe les ténèbres et inspire des actions empreintes
+              de compassion et de grâce infinie. Comme l'apôtre Paul nous le
+              rappelle dans
+              <strong style="color: #eeba05">
+                1 Corinthiens 16:14 (LSG) : "Que tout ce que vous faites se
+                fasse avec amour." </strong
+              >Cette exhortation résonne profondément dans nos cœurs, nous
+              rappelant que chaque acte, chaque parole et chaque pensée
+              doivent être teintés de l'amour du Christ. En suivant cette
+              voie, nous contribuons à illuminer non seulement nos propres
+              vies, mais....
+            </p>
+            <a class="btn btn-primary py-2 px-3 me-3" href="ministere.html">
+              Lire plus
+              <div
+                class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2"
+              >
+                <i class="fa fa-arrow-right"></i>
+              </div>
+            </a>
+            <a class="btn btn-outline-primary py-2 px-3" href="contact.html">
+              Contact
+              <div
+                class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2"
+              >
+                <i class="fa fa-arrow-right"></i>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+          <div
+            class="position-relative overflow-hidden h-100"
+            style="min-height: 400px"
+          >
+            <img
+              class="position-absolute w-100 h-100 pt-5 pe-5"
+              src="img/about-5.jfif"
+              alt="  Éclairant les âmes perdues, Répandant l'amour de Christ-1"
+              style="object-fit: cover; width: 100%"
+            />
+            <!-- <img
+            class="position-absolute top-0 end-0 bg-white ps-2 pb-2"
+            src="img/about-4.jfif"
+            alt="  Éclairant les âmes perdues, Répandant l'amour de Christ-2"
+            style="width: 200px; height: 200px"
+          /> -->
+          </div>
+        </div>
 
+        <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+          <div
+            class="position-relative overflow-hidden h-100"
+            style="min-height: 400px"
+          >
+            <img
+              class="position-absolute w-100 h-100 pt-5 pe-5"
+              src="img/all7.jfif"
+              alt="  Philharmonie La Grâce Parle-1"
+              style="object-fit: cover"
+            />
+            <!-- <img
+            class="position-absolute top-0 end-0 bg-white ps-2 pb-2"
+            src="img/about-6.jfif"
+            alt="  Philharmonie La Grâce Parle-2"
+            style="width: 200px; height: 200px"
+          /> -->
+          </div>
+        </div>
+        <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
+          <div class="h-100">
+            <!-- <div class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3">À propos de nous</div> -->
+            <h1 class="display-6 mb-5">
+              Philharmonie La Grâce Parle : Réunir les Cœurs avec Christ à
+              Travers les Mélodies de l'Espérance.
+            </h1>
+
+            <p class="mb-5" style="text-align: justify">
+              Vibrantes mélodies tissent des liens spirituels, transcendant
+              les frontières. La musique devient le langage universel de
+              l'amour christique, invitant chacun à se rassembler dans une
+              harmonie sacrée. Chaque note résonne comme une invitation à
+              connaître Christ, transcendant les différences pour créer
+              une....
+            </p>
+            <a class="btn btn-primary py-2 px-3 me-3" href="fanfare.html">
+              Lire plus
+              <div
+                class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2"
+              >
+                <i class="fa fa-arrow-right"></i>
+              </div>
+            </a>
+            <a class="btn btn-outline-primary py-2 px-3" href="contact.html">
+              Contact
+              <div
+                class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2"
+              >
+                <i class="fa fa-arrow-right"></i>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
      <!-- Donate Start -->
      <div
      class="container-fluid donate my-5 py-5"
