--- a/index.html
+++ b/index.html
@@ -136,8 +136,9 @@ button {
   .tall-box {
     height: 400px;
     width: 40%;
-    background-image: url("./img/trimphe.jpg");
+    background-image: url("./img/dalum.jpg");
     background-size: cover;
+    background-position: center;
   }
   .important {
     height: 400px;
@@ -145,6 +146,7 @@ button {
     background-image: url("./img/book.avif");
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
     object-fit: cover;
   }
   
@@ -257,10 +259,10 @@ button {
         data-wow-delay="0.1s"
       >
         <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-          <h1 class="fw-bold text-primary m-0">
+          <p class="fw-bold text-primary m-0">
             <img src="./img/logo.jfif" width="45" style="border-radius: 100%" />
             La Grâce<span class="text-white"> Parle</span>
-          </h1>
+          </p>
         </a>
         <button
           type="button"
@@ -537,7 +539,7 @@ button {
         <span class="icon">&#9654;</span>
         <button class="mui-button primary"><a href="">VIDÉO</a></button>
       </div>
-      <h1 class="title">  La grâce ne condamne pas !  <br>   <a class="btn btn-secondary" href="#">VOIR LA VIDÉO</a> <!-- Nouveau bouton --></h1>
+      <h1 class="title">  La triomphe de la foi !  <br>   <a class="btn btn-secondary" href="#">VOIR LA VIDÉO</a> <!-- Nouveau bouton --></h1>
     
 
     </div>
