--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@ button {
         <span class="icon">&#9654;</span>
         <button class="mui-button primary"><a href="">VIDÉO</a></button>
       </div>
-      <h1 class="title">  La triomphe de la foi !  <br>   <a class="btn btn-secondary" href="#">VOIR LA VIDÉO</a> <!-- Nouveau bouton --></h1>
+      <h1 class="title">  Le triomphe de la foi !  <br>   <a class="btn btn-secondary" href="#">VOIR LA VIDÉO</a> <!-- Nouveau bouton --></h1>
     
 
     </div>
